--- a/eShopKart/Login.storyboard
+++ b/eShopKart/Login.storyboard
@@ -271,7 +271,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BC Logo-2" translatesAutoresizingMaskIntoConstraints="NO" id="Sbn-ze-7pK">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bc_logo" translatesAutoresizingMaskIntoConstraints="NO" id="Sbn-ze-7pK">
                                 <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="Sbn-ze-7pK" secondAttribute="height" multiplier="145:139" id="AdN-cr-BKe"/>
@@ -281,8 +281,7 @@
                                         <exclude reference="AdN-cr-BKe"/>
                                     </mask>
                                 </variation>
-                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
-                                    <rect key="frame" x="128" y="173" width="144" height="139"/>
+                                <variation key="heightClass=regular-widthClass=compact">
                                     <mask key="constraints">
                                         <include reference="AdN-cr-BKe"/>
                                     </mask>
@@ -425,6 +424,10 @@
                             </mask>
                         </variation>
                     </view>
+                    <connections>
+                        <outlet property="emailMobileTextField" destination="jWz-kO-kll" id="SEf-4z-dUZ"/>
+                        <outlet property="passwordTextField" destination="Qam-Mz-1B7" id="esj-cL-sx7"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2i4-fs-nhS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -579,7 +582,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="16F-ap-fWd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3589.5" y="-327.75"/>
+            <point key="canvasLocation" x="3666" y="-22.5"/>
         </scene>
         <!--Reset Password View Controller-->
         <scene sceneID="oLI-PJ-wnu">
@@ -732,7 +735,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Mob number" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="YQd-xY-gZ3">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Mobile Number" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="YQd-xY-gZ3">
                                 <rect key="frame" x="-25" y="-30" width="97" height="30"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" keyboardType="phonePad"/>
@@ -761,7 +764,7 @@
                                     <action selector="alreadyHaveAccountAction:" destination="ptn-3i-2UG" eventType="touchUpInside" id="PeK-GC-1AG"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BC Logo-2" translatesAutoresizingMaskIntoConstraints="NO" id="OgZ-1x-kRI">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bc_logo" translatesAutoresizingMaskIntoConstraints="NO" id="OgZ-1x-kRI">
                                 <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="OgZ-1x-kRI" secondAttribute="height" multiplier="145:139" id="Glh-9S-dz0"/>
@@ -771,8 +774,7 @@
                                         <exclude reference="Glh-9S-dz0"/>
                                     </mask>
                                 </variation>
-                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
-                                    <rect key="frame" x="128" y="173" width="144" height="139"/>
+                                <variation key="heightClass=regular-widthClass=compact">
                                     <mask key="constraints">
                                         <include reference="Glh-9S-dz0"/>
                                     </mask>
@@ -852,6 +854,9 @@
                             </mask>
                         </variation>
                     </view>
+                    <connections>
+                        <outlet property="mobileNumberTextField" destination="YQd-xY-gZ3" id="gKK-iK-fgP"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Cv4-U9-XOn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -885,25 +890,6 @@
                                     </mask>
                                 </variation>
                             </imageView>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sPx-EB-g9M">
-                                <rect key="frame" x="-25" y="-30" width="97" height="30"/>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="46" id="IlC-Py-F9i"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
-                                <variation key="default">
-                                    <mask key="constraints">
-                                        <exclude reference="IlC-Py-F9i"/>
-                                    </mask>
-                                </variation>
-                                <variation key="heightClass=regular-widthClass=compact">
-                                    <mask key="constraints">
-                                        <include reference="IlC-Py-F9i"/>
-                                    </mask>
-                                </variation>
-                            </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ibd-3T-lBm">
                                 <rect key="frame" x="-25" y="-30" width="97" height="30"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
@@ -1094,6 +1080,25 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                             </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sPx-EB-g9M">
+                                <rect key="frame" x="-25" y="-30" width="97" height="30"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="46" id="IlC-Py-F9i"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="IlC-Py-F9i"/>
+                                    </mask>
+                                </variation>
+                                <variation key="heightClass=regular-widthClass=compact">
+                                    <mask key="constraints">
+                                        <include reference="IlC-Py-F9i"/>
+                                    </mask>
+                                </variation>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" red="0.41960784309999999" green="0.56862745100000001" blue="0.62745098040000002" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
@@ -1127,7 +1132,6 @@
                         <variation key="default">
                             <mask key="subviews">
                                 <exclude reference="9Jj-X7-Vt0"/>
-                                <exclude reference="sPx-EB-g9M"/>
                                 <exclude reference="ibd-3T-lBm"/>
                                 <exclude reference="Cta-Ug-AWQ"/>
                                 <exclude reference="C9G-Xt-LuX"/>
@@ -1135,6 +1139,7 @@
                                 <exclude reference="4zq-Qf-0JS"/>
                                 <exclude reference="9mt-R2-qBu"/>
                                 <exclude reference="s9x-r1-bft"/>
+                                <exclude reference="sPx-EB-g9M"/>
                             </mask>
                             <mask key="constraints">
                                 <exclude reference="IFZ-lK-nep"/>
@@ -1168,7 +1173,6 @@
                         <variation key="heightClass=regular-widthClass=compact">
                             <mask key="subviews">
                                 <include reference="9Jj-X7-Vt0"/>
-                                <include reference="sPx-EB-g9M"/>
                                 <include reference="ibd-3T-lBm"/>
                                 <include reference="Cta-Ug-AWQ"/>
                                 <include reference="C9G-Xt-LuX"/>
@@ -1176,6 +1180,7 @@
                                 <include reference="4zq-Qf-0JS"/>
                                 <include reference="9mt-R2-qBu"/>
                                 <include reference="s9x-r1-bft"/>
+                                <include reference="sPx-EB-g9M"/>
                             </mask>
                             <mask key="constraints">
                                 <include reference="IFZ-lK-nep"/>
@@ -1713,13 +1718,13 @@
         </scene>
     </scenes>
     <resources>
-        <image name="BC Logo-2" width="800" height="800"/>
         <image name="Login" width="124" height="56"/>
         <image name="Save" width="64" height="28"/>
         <image name="Signup" width="125" height="56"/>
         <image name="Triangle  left" width="238" height="277"/>
         <image name="Triangle Right" width="230" height="287"/>
         <image name="back_icon" width="20" height="32"/>
+        <image name="bc_logo" width="400" height="400"/>
         <image name="bg" width="750" height="1334"/>
         <image name="cross_icon" width="15" height="16"/>
         <image name="logo1.png" width="82" height="39"/>
